seccond fix swagger
